--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual Environment
+.venv/
+
+# IDE specific
+.vscode/
+*.code-workspace
+
+# OS Files
+.DS_Store
+Thumbs.db
 
